[gd_scene load_steps=3 format=3 uid="uid://bsk4djq47krd0"]

[ext_resource type="Script" uid="uid://j81xd4185p8x" path="res://Script/MenuPausa.gd" id="1_vk2cv"]
[ext_resource type="PackedScene" uid="uid://7nyt06yrvxoe" path="res://Scenes/options_menu.tscn" id="2_8wxh3"]

[node name="Pausa" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vk2cv")

[node name="PausaBoton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 55.0
grow_vertical = 0
text = "Pausa"

[node name="OptionsMenu" parent="." instance=ExtResource("2_8wxh3")]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 1
anchor_left = 0.435
anchor_top = 0.199
anchor_right = 0.772
anchor_bottom = 0.833
offset_left = -0.120026
offset_top = 0.0479889
offset_right = -0.343994
offset_bottom = 0.215942
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -33.0
offset_right = 62.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Opciones" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Opciones"

[node name="VolverAlMenu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volver al Menu"

[node name="Volver" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volver"

[connection signal="pressed" from="PausaBoton" to="." method="pausa"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Opciones" to="." method="mostrarOpciones"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VolverAlMenu" to="." method="volveralMenu"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Volver" to="." method="sacarPausa"]
